created Lists page

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,5 @@
 .footer {
-  @apply p-4 pb-2 md:px-6 lg:px-8 lg:flex lg:flex-col  2xl:max-w-1440 2xl:mx-auto;
+  @apply p-4 pb-2 md:px-2.5 lg:flex lg:flex-col 2xl:max-w-1440 2xl:mx-auto;
 }
 
 .footer-main {
