--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply flex flex-col py-8 w-[256px] pl-3;
+  @apply flex flex-col w-[256px] pl-3;
 
   section {
     @apply flex flex-col;
