--- a/src/app/dashboard/lists/ListsPage.module.scss
+++ b/src/app/dashboard/lists/ListsPage.module.scss
@@ -15,13 +15,20 @@
 }
 
 .learn-vocabulary {
-  @apply flex justify-between bg-[#d2eefc] border-[#57c7ffc4] border rounded-2xl px-6 py-7 mx-4 text-[#0d47a1] text-xl leading-5 mb-6;
+  @apply flex justify-between bg-[#d2eefc] border-[#57c7ffc4] border rounded-2xl px-6 py-7 mx-4 text-[#0d47a1] text-xl leading-5 mb-6 
+  md:text-3xl md:pr-7 md:pl-10;
 
-  span {
-    @apply font-bold;
+  p {
+    span {
+      @apply font-bold;
+    }
   }
 }
 
 .arrow {
-  @apply flex items-center;
+  @apply flex items-center text-[#229CDA];
+
+  span {
+    @apply hidden font-normal md:block;
+  }
 }
