--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,45 +1,54 @@
 .footer {
-  @apply p-4 pb-2 md:px-2.5 lg:flex lg:flex-col 2xl:max-w-1440 2xl:mx-auto;
+  @apply p-4 pb-2 
+  sm:mx-3 
+  lg:flex lg:flex-col 
+  xl:max-w-[1320px] xl:mx-auto;
 }
 
 .footer-main {
   @apply lg:flex;
 
   > a {
-    @apply text-center block font-bold p-2 mb-4 text-2xl sm:text-left lg:mb-0;
+    @apply text-center block font-bold p-2 mb-4 text-2xl 
+    sm:text-left 
+    lg:mb-0;
   }
 }
 
 .footer-center {
-  @apply md:flex md:justify-between lg:w-full;
+  @apply md:flex md:justify-between 
+  lg:w-full;
 }
 
 .footer-left {
-  @apply flex flex-col items-center mb-14 sm:items-start sm:mb-4 lg:mb-0 lg:justify-center 2xl:ml-2.5;
+  @apply flex flex-col items-center mb-14 
+  sm:items-start sm:mb-4 
+  lg:mb-0 lg:justify-center 
+  2xl:ml-2.5;
 
   a {
     @apply block font-bold p-2;
   }
 
   ul {
-    @apply flex gap-1 flex-col items-center sm:flex-row;
+    @apply flex gap-1 flex-col items-center 
+    sm:flex-row;
   }
 }
 
 .footer-right {
-  @apply flex flex-col items-center sm:items-start sm:flex-row sm:pl-2 lg:items-center 2xl:mr-2.5;
-
-  p {
-  }
+  @apply flex flex-col items-center 
+  sm:items-start sm:flex-row sm:pl-2 
+  lg:items-center 
+  2xl:mr-2.5;
 
   ul {
-    @apply flex gap-3 items-center mt-4 sm:mt-0 sm:ml-3;
-  }
-
-  li {
+    @apply flex gap-3 items-center mt-4 
+    sm:mt-0 sm:ml-3;
   }
 }
 
 .footer-bottom {
-  @apply text-center text-xs mt-2 sm:text-left sm:pl-2;
+  @apply text-center text-xs mt-2 
+  sm:text-left sm:pl-2;
 }
