--- a/src/components/Burger/Burger.module.scss
+++ b/src/components/Burger/Burger.module.scss
@@ -1,5 +1,6 @@
 .burger-btn {
-  @apply ml-3 w-[30px] h-[20px] relative z-[1];
+  @apply ml-3 w-[30px] h-[20px] relative z-[1]
+  lg:hidden;
 
   span {
     @apply absolute left-0 h-[2px] w-full top-[9px] bg-[#000]
@@ -9,7 +10,8 @@
 }
 
 .burger {
-  @apply bg-slate-300 fixed top-0 left-[-100%] h-full w-[290px] px-2.5 z-[2] flex justify-between flex-col;
+  @apply bg-slate-300 fixed top-0 left-[-100%] h-full w-[290px] px-2.5 z-[2] flex justify-between flex-col transition-all ease-in-out duration-300
+  lg:hidden;
 
   .top {
     > div {
@@ -38,8 +40,7 @@
       @apply flex flex-col pb-4;
 
       button {
-        @apply flex items-center justify-center w-full self-start py-2 px-6 mt-4 my-auto items-center bg-blue-200 ml-auto font-bold rounded-full text-white transition-all duration-300
-        hover:no-underline hover:bg-purple;
+        @apply flex items-center justify-center w-full mt-4;
 
         svg {
           @apply mr-2;
