--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -1,4 +1,4 @@
 .button {
-  @apply flex self-start py-2 px-6 mr-4 my-auto items-center bg-blue-100 ml-auto font-bold rounded-full text-white transition-all duration-300 
+  @apply flex self-start py-2 px-6 my-auto items-center bg-blue-100 ml-auto font-bold rounded-full text-white transition-all duration-300 
   hover:bg-purple;
 }
