--- a/src/components/Burger/Burger.module.scss
+++ b/src/components/Burger/Burger.module.scss
@@ -1,5 +1,5 @@
 .burger-btn {
-  @apply ml-3 w-[30px] h-[20px] relative z-[1]
+  @apply ml-3 w-[30px] h-[20px] relative z-[1] cursor-pointer
   lg:hidden;
 
   span {
@@ -19,6 +19,10 @@
 
       h2 {
         @apply font-bold text-2xl;
+      }
+
+      svg {
+        @apply cursor-pointer;
       }
     }
 
