--- a/src/components/UserModal/UserModal.module.scss
+++ b/src/components/UserModal/UserModal.module.scss
@@ -1,8 +1,28 @@
+.user {
+  @apply flex items-center cursor-pointer;
+
+  .arrow {
+    @apply ml-2 transition-all ease-in-out duration-300;
+  }
+
+  .user-avatar {
+    @apply rounded-full bg-black w-10 h-10 flex items-center justify-center;
+  }
+
+  .icon {
+    @apply fill-white;
+  }
+}
+
+.active {
+  @apply rotate-180;
+}
+
 .modal {
   @apply flex flex-col relative;
 
   ul {
-    @apply bg-[#f1f1ef] absolute top-[10px] right-0 w-[160px] h-[110px] py-2;
+    @apply bg-[#f1f1ef] absolute top-[28px] right-0 w-[160px] h-[110px] py-2;
 
     li {
       @apply px-4 py-1 flex items-center;
