--- a/src/components/LanguageModal/LanguageModal.module.scss
+++ b/src/components/LanguageModal/LanguageModal.module.scss
@@ -1,3 +1,11 @@
+.nav-item {
+  @apply flex items-center font-bold cursor-pointer;
+
+  svg {
+    @apply ml-2 transition-all ease-in-out duration-300;
+  }
+}
+
 .modal {
   @apply flex flex-col relative;
 
@@ -12,4 +20,8 @@
       }
     }
   }
+}
+
+.active {
+  @apply rotate-180;
 }
