--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -1,4 +1,9 @@
 .button {
-  @apply flex self-start py-2 px-6 my-auto items-center bg-blue-100 ml-auto font-bold rounded-full text-white transition-all duration-300 
+  @apply flex justify-center items-center text-center py-2 px-6 items-center bg-blue-200 font-bold rounded-full text-white transition-all ease-linear duration-150
   hover:bg-purple;
+}
+
+.outline {
+  @apply bg-transparent text-blue-200 border border-solid border-blue-200
+  hover:bg-transparent hover:border-purple hover:text-purple;
 }
