--- a/src/components/ui/Modal/Modal.module.scss
+++ b/src/components/ui/Modal/Modal.module.scss
@@ -2,9 +2,10 @@
   @apply fixed top-0 left-0 w-screen h-screen z-10 bg-neutral-800 opacity-50;
 }
 .modal {
-  @apply fixed flex flex-col box-border min-w-fit overflow-hidden p-5 bg-white inset-y-0 inset-x-0 z-20
-  md:inset-x-12 md:inset-y-20 md:rounded
-  lg:inset-x-20 lg:inset-y-32;
+  @apply fixed max-w-[1040px] flex flex-col box-border min-w-fit overflow-hidden p-5 bg-white inset-y-0 inset-x-0 z-20
+  sm:inset-x-12 sm:inset-y-28 sm:rounded
+  lg:inset-x-20 lg:inset-y-36 lg:p-8
+  xl:mx-auto;
 
   button {
     @apply py-2 px-2 self-end font-bold;
