--- a/src/components/LanguageModal/LanguageModal.module.scss
+++ b/src/components/LanguageModal/LanguageModal.module.scss
@@ -7,7 +7,7 @@
 }
 
 .modal {
-  @apply flex flex-col relative;
+  @apply flex flex-col relative z-[1];
 
   ul {
     @apply bg-[#f1f1ef] absolute top-[15px] right-[-3px] w-[100px] h-[80px] py-2;
