--- a/src/components/PricingCard/PricingCard.module.scss
+++ b/src/components/PricingCard/PricingCard.module.scss
@@ -9,8 +9,14 @@
   before:first:bg-grey;
 
   a {
-    @apply w-full self-end py-3 px-10 
-    sm:w-[200px];
+    @apply flex justify-center items-center text-center py-2 px-6 items-center bg-blue-200 font-bold rounded-full text-white transition-all ease-linear duration-150 w-full self-end py-3 px-10 
+    sm:w-[200px]
+    hover:bg-purple;
+  }
+
+  .outline {
+    @apply bg-transparent text-blue-200 border border-solid border-blue-200
+    hover:bg-transparent hover:border-purple hover:text-purple;
   }
 
   h6 {
