--- a/src/components/ui/Modal/Modal.module.scss
+++ b/src/components/ui/Modal/Modal.module.scss
@@ -8,7 +8,7 @@
   xl:mx-auto;
 
   button {
-    @apply py-2 px-2 self-end font-bold;
+    @apply py-2 px-2 self-end font-bold  z-[2];
   }
 
   > div {
