--- a/src/app/[locale]/globals.scss
+++ b/src/app/[locale]/globals.scss
@@ -15,6 +15,9 @@
 //     --background-end-rgb: 0, 0, 0;
 //   }
 // }
+// * {
+//   letter-spacing: -0.7px;
+// }
 
 body {
   color: rgb(var(--foreground-rgb));
