--- a/src/components/Burger/Burger.module.scss
+++ b/src/components/Burger/Burger.module.scss
@@ -23,6 +23,14 @@
 
       h2 {
         @apply font-bold text-2xl;
+
+        a {
+          @apply text-blue-300;
+
+          span {
+            @apply text-purple;
+          }
+        }
       }
 
       svg {
