--- a/src/app/[locale]/MainPage.module.scss
+++ b/src/app/[locale]/MainPage.module.scss
@@ -1,6 +1,6 @@
 .container {
   .hero {
-    @apply my-6 flex justify-center flex-col items-center  
+    @apply my-6 flex justify-center flex-col items-center px-4  
     sm:mt-12;
 
     h2 {
@@ -27,7 +27,7 @@
     @apply px-4;
 
     + div {
-      @apply flex leading-6 pb-6 pt-2 flex-col-reverse items-center justify-between  
+      @apply flex leading-6 pb-6 pt-2 items-center justify-between  
       lg:flex-row;
     }
     .users {
@@ -44,6 +44,56 @@
 
       .advantages {
         @apply mt-14 flex justify-between;
+      }
+    }
+  }
+
+  .help {
+    @apply px-4 flex leading-6 min-h-[47vh] my-14 mb-40 justify-evenly flex-col
+    sm:mb-14
+    lg:min-h-[40vh] lg:justify-between lg:flex-row 
+    xl:min-h-[45vh];
+
+    .description {
+      @apply w-full relative mb-4 
+      lg:w-[42%] lg:mb-0;
+
+      h3 {
+        @apply font-bold mt-10 mb-4 text-black 
+        sm:text-lg 
+        lg:text-2xl;
+      }
+
+      p {
+        @apply text-sm mb-2;
+      }
+
+      button {
+        @apply px-14;
+      }
+    }
+
+    .image {
+      @apply relative flex flex-col w-[90%]
+      md:w-[80%] 
+      lg:w-auto;
+
+      .back {
+        @apply self-end h-[130px] 
+        sm:h-auto;
+      }
+
+      .rect {
+        @apply bg-blue-100 rounded-3xl w-[80%] h-[130px] absolute right-9 top-5
+        sm:h-[254px]   
+        md:w-[500px] 
+        xl:w-[528px];
+      }
+
+      .front {
+        @apply shadow rounded-3xl w-[80%] h-max absolute right-16 top-14 
+        md:w-[500px] 
+        xl:w-auto;
       }
     }
   }
