--- a/src/app/[locale]/MainPage.module.scss
+++ b/src/app/[locale]/MainPage.module.scss
@@ -23,13 +23,9 @@
     }
   }
 
-  .info {
+  > .info {
     @apply px-4;
 
-    + div {
-      @apply flex leading-6 pb-6 pt-2 items-center justify-between  
-      lg:flex-row;
-    }
     .users {
       h3 {
         @apply font-bold text-left mb-4
@@ -43,13 +39,13 @@
       }
 
       .advantages {
-        @apply mt-14 flex justify-between;
+        @apply mt-7 flex justify-between;
       }
     }
   }
 
   .help {
-    @apply px-4 flex leading-6 min-h-[47vh] my-14 mb-40 justify-evenly flex-col
+    @apply px-4 flex leading-6 min-h-[47vh] my-14 mb-40 flex-col
     sm:mb-14
     lg:min-h-[40vh] lg:justify-between lg:flex-row 
     xl:min-h-[45vh];
@@ -65,7 +61,8 @@
       }
 
       p {
-        @apply text-sm mb-2;
+        @apply text-sm mb-2             
+        lg:text-base;
       }
 
       button {
@@ -75,32 +72,32 @@
 
     .image {
       @apply relative flex flex-col w-[90%]
-      md:w-[80%] 
+      md:items-center
       lg:w-auto;
 
       .back {
-        @apply self-end h-[130px] 
-        sm:h-auto;
+        @apply self-end w-[130px] h-[130px] 
+        sm:h-auto  sm:w-auto;
       }
 
       .rect {
-        @apply bg-blue-100 rounded-3xl w-[80%] h-[130px] absolute right-9 top-5
+        @apply bg-blue-200 rounded-3xl w-[80%] h-[130px] absolute right-9 top-5
         sm:h-[254px]   
         md:w-[500px] 
         xl:w-[528px];
       }
 
       .front {
-        @apply shadow rounded-3xl w-[80%] h-max absolute right-16 top-14 
-        md:w-[500px] 
-        xl:w-auto;
+        @apply shadow rounded-3xl w-[80%] h-max absolute right-14 top-10
+        md:w-[500px] md:min-w-[500px]
+        xl:min-w-[600px];
       }
     }
   }
 
   .premium {
     @apply flex leading-6 items-center justify-center my-14 px-4 
-    sm:mt-44 
+    sm:mt-52 
     lg:mt-[10.5rem] 
     xl:mt-[11.5rem];
 
@@ -134,6 +131,17 @@
           @apply text-center text-black bg-white w-full py-3 px-12 border-0 rounded-3xl font-medium transition-[background] duration-[.3s] ease-in-out;
         }
       }
+
+      .image {
+        @apply flex justify-center w-full 
+        sm:w-1/2 
+        lg:w-auto;
+
+        img {
+          @apply h-[320px] self-end w-full max-w-[320px]  
+          sm:w-auto sm:ml-[-60px] sm:min-h-[405px] sm:min-w-[405px] sm:mb-[-60px];
+        }
+      }
     }
   }
 
@@ -152,7 +160,8 @@
   }
 
   .download {
-    @apply mt-4 mb-14 flex flex-col items-center;
+    @apply mt-4 mb-14 flex flex-col items-center px-4
+    lg:flex-row lg:justify-between;
 
     .info {
       @apply flex flex-col;
@@ -163,18 +172,26 @@
         lg:text-2xl;
       }
 
+      img {
+        @apply hidden 
+        lg:block;
+      }
+
       p {
         @apply text-sm my-4 font-medium;
       }
 
       a {
         @apply px-12 py-3 bg-blue-200 w-full text-center font-medium ease-in-out rounded-3xl border-0 text-white transition-[background] duration-[.3s]  
-        hover:bg-purple;
+        hover:bg-purple
+        xs:max-w-[172px];
       }
     }
 
     .image {
-      @apply w-[230px] mt-4;
+      @apply w-[80%] mt-4 
+      xs:w-1/2 
+      md:w-1/3 max-w-[430px];
     }
   }
 }
