--- a/src/app/[locale]/globals.scss
+++ b/src/app/[locale]/globals.scss
@@ -19,6 +19,10 @@
 //   letter-spacing: -0.7px;
 // }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
