--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,33 +1,37 @@
 .header {
-  @apply sticky top-0 z-20 w-full backdrop-blur bg-white bg-opacity-80 flex items-center p-4 justify-between
-  xl:max-w-[1320px] xl:mx-auto;
-}
+  @apply sticky top-0 z-20 w-full backdrop-blur bg-white bg-opacity-80;
 
-.header-left {
-  @apply flex items-center;
+  .header-container {
+    @apply flex items-center p-4 justify-between
+    xl:max-w-[1320px] xl:mx-auto;
 
-  > a {
-    @apply text-blue-300 sm:text-2xl;
-  }
+    .header-left {
+      @apply flex items-center;
 
-  a {
-    @apply font-bold p-2;
+      > a {
+        @apply text-blue-300 sm:text-2xl;
+      }
 
-    span {
-      @apply text-purple;
+      a {
+        @apply font-bold p-2;
+
+        span {
+          @apply text-purple;
+        }
+      }
+    }
+
+    .header-right {
+      @apply flex items-center;
+    }
+
+    .nav-list {
+      @apply hidden 
+      lg:flex lg:items-center lg:gap-5 lg:ml-5;
+    }
+
+    .nav-item {
+      @apply flex items-center font-bold;
     }
   }
-}
-
-.header-right {
-  @apply flex items-center;
-}
-
-.nav-list {
-  @apply hidden 
-  lg:flex lg:items-center lg:gap-5 lg:ml-5;
-}
-
-.nav-item {
-  @apply flex items-center font-bold;
 }
