--- a/src/app/[locale]/MainPage.module.scss
+++ b/src/app/[locale]/MainPage.module.scss
@@ -1,7 +1,8 @@
 .container {
   .hero {
     @apply my-6 flex justify-center flex-col items-center px-4  
-    sm:mt-12;
+    sm:mt-12
+    lg:max-w-[1320px] lg:mx-auto;
 
     h2 {
       @apply font-semibold text-lg mb-4 font-bold 
@@ -24,7 +25,8 @@
   }
 
   > .info {
-    @apply px-4;
+    @apply px-4 
+    lg:max-w-[1320px] lg:mx-auto;
 
     .users {
       h3 {
@@ -47,7 +49,7 @@
   .help {
     @apply px-4 flex leading-6 min-h-[47vh] my-14 mb-40 flex-col
     sm:mb-14
-    lg:min-h-[40vh] lg:justify-between lg:flex-row 
+    lg:min-h-[40vh] lg:justify-between lg:flex-row lg:max-w-[1320px] lg:mx-auto 
     xl:min-h-[45vh];
 
     .description {
@@ -98,7 +100,7 @@
   .premium {
     @apply flex leading-6 items-center justify-center my-14 px-4 
     sm:mt-52 
-    lg:mt-[10.5rem] 
+    lg:mt-[10.5rem] lg:max-w-[1320px] lg:mx-auto 
     xl:mt-[11.5rem];
 
     > div {
@@ -151,7 +153,7 @@
     > div {
       @apply flex leading-6 flex-col items-center 
       sm:mx-[-15px] 
-      lg:mx-0;
+      lg:mx-0 lg:max-w-[1320px] lg:mx-auto;
 
       h3 {
         @apply text-center text-2xl font-bold mb-4;
