--- a/src/app/[locale]/globals.scss
+++ b/src/app/[locale]/globals.scss
@@ -69,3 +69,13 @@ body {
   }
 }
 
+@media screen and (min-width: 576px) {
+  .swiper-slide {
+    opacity: 0.7 !important;
+  }
+
+  .swiper-slide-active {
+    opacity: 1 !important;
+  }
+}
+
