--- a/src/components/LanguageModal/LanguageModal.module.scss
+++ b/src/components/LanguageModal/LanguageModal.module.scss
@@ -1,5 +1,5 @@
 .nav-item {
-  @apply flex items-center font-bold cursor-pointer;
+  @apply flex items-center font-bold cursor-pointer text-blue-200;
 
   svg {
     @apply ml-2 transition-all ease-in-out duration-300;
@@ -10,14 +10,18 @@
   @apply flex flex-col relative z-[1];
 
   ul {
-    @apply bg-[#f1f1ef] absolute top-[15px] right-[-3px] w-[120px] h-[80px] py-2;
+    @apply rounded-lg bg-[#cbd5e1] absolute top-[15px] right-[-3px] w-[120px] h-[80px] py-2;
 
     li {
-      @apply px-4 py-1 flex items-center;
+      @apply font-medium px-4 py-1 flex items-center cursor-pointer;
 
       .icon {
         @apply mr-1;
       }
+    }
+
+    .selected {
+      @apply cursor-default opacity-50;
     }
   }
 }
