--- a/src/components/ui/NavigationLink/NavigationLink.module.scss
+++ b/src/components/ui/NavigationLink/NavigationLink.module.scss
@@ -1,8 +1,9 @@
 .link {
   @apply relative
-  hover:after:content-[''] hover:after:flex hover:after:mx-auto hover:after:h-[2px] hover:after:w-[70%] hover:after:bg-blue-200 hover:after:absolute hover:after:left-[15%] hover:after:bottom-0;
+  after:flex after:content-[''] after:w-0 after:mx-auto after:transition-all after:ease-in-out after:duration-500 after:h-[2px] after:absolute after:left-[15%] after:bottom-[3px]
+  hover:after:w-[70%] hover:after:bg-blue-200;
 }
 
 .active {
-  @apply after:content-[''] after:flex after:mx-auto after:h-[2px] after:w-[70%] after:bg-blue-200 after:absolute after:left-[15%] after:bottom-0;
+  @apply after:content-[''] after:flex after:mx-auto after:h-[2px] after:w-[70%] after:bg-blue-200 after:absolute after:left-[15%] after:bottom-[3px];
 }
