added hover for buttons and links

--- a/src/app/[locale]/contact-us/ContactUsPage.module.scss
+++ b/src/app/[locale]/contact-us/ContactUsPage.module.scss
@@ -40,7 +40,7 @@
         }
 
         button {
-          @apply font-medium rounded text-white bg-blue-200 border-blue-200 px-3 py-1.5;
+          @apply px-3 rounded;
         }
       }
     }
