--- a/src/app/[locale]/notFound.module.scss
+++ b/src/app/[locale]/notFound.module.scss
@@ -22,7 +22,8 @@
     }
 
     .link {
-      @apply flex font-medium items-center justify-center bg-blue-200 text-white px-3 py-1.5 rounded;
+      @apply flex font-medium items-center justify-center bg-blue-200 text-white px-3 py-1.5 rounded transition-all ease-in-out duration-300
+      hover:bg-purple;
 
       svg {
         @apply mr-2;
@@ -33,7 +34,8 @@
       @apply block text-center mt-8 block;
 
       a {
-        @apply underline;
+        @apply underline transition-all ease-in-out duration-150 
+        hover:text-purple;
       }
     }
   }
