--- a/src/components/LanguageModal/LanguageModal.module.scss
+++ b/src/components/LanguageModal/LanguageModal.module.scss
@@ -10,14 +10,18 @@
   @apply flex flex-col relative z-[1];
 
   ul {
-    @apply rounded-lg bg-[#cbd5e1] absolute top-[15px] right-[-3px] w-[120px] h-[80px] py-2;
+    @apply rounded-lg shadow-[0_.5rem_1rem_rgba(0,0,0,.15)] bg-[#ffffffda] absolute top-[15px] right-[-3px] w-[120px] h-[80px] py-2;
 
     li {
-      @apply font-medium px-4 py-1 flex items-center cursor-pointer;
+      @apply text-blue-200 font-medium px-4 py-1 flex items-center cursor-pointer transition-all ease-in-out duration-150;
 
       .icon {
         @apply mr-1;
       }
+    }
+
+    li:not(.selected) {
+      @apply hover:text-purple;
     }
 
     .selected {
