--- a/src/components/ui/NavigationLink/NavigationLink.module.scss
+++ b/src/components/ui/NavigationLink/NavigationLink.module.scss
@@ -1,9 +1,18 @@
-.link {
+.link-burger {
+  @apply transition-all ease-in-out duration-150
+  hover:text-purple;
+}
+
+.link-header {
   @apply relative
   after:flex after:content-[''] after:w-0 after:mx-auto after:transition-all after:ease-in-out after:duration-150 after:h-[2px] after:absolute after:left-[15%] after:bottom-[3px]
   hover:after:w-[70%] hover:after:bg-blue-200;
 }
 
-.active {
+.active-burger {
+  @apply text-purple;
+}
+
+.active-header {
   @apply after:content-[''] after:flex after:mx-auto after:h-[2px] after:w-[70%] after:bg-blue-200 after:absolute after:left-[15%] after:bottom-[3px];
 }
