--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -17,7 +17,7 @@
     lg:mb-0;
 
     span {
-      @apply text-purple;
+      @apply text-purple-100;
     }
   }
 }
@@ -35,7 +35,7 @@
 
   a {
     @apply block font-bold p-2 text-blue-200 transition-all ease-in-out duration-150
-    hover:text-purple;
+    hover:text-purple-100;
   }
 
   ul {
@@ -56,7 +56,7 @@
 
     a {
       @apply transition-all ease-in-out duration-150
-      hover:text-purple;
+      hover:text-purple-100;
     }
   }
 }
