--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -16,7 +16,7 @@
         @apply font-bold p-2;
 
         span {
-          @apply text-purple;
+          @apply text-purple-100;
         }
       }
     }
