--- a/src/app/[locale]/MainPage.module.scss
+++ b/src/app/[locale]/MainPage.module.scss
@@ -14,7 +14,7 @@
       }
 
       span {
-        @apply text-purple;
+        @apply text-purple-100;
       }
     }
 
@@ -25,10 +25,118 @@
   }
 
   > .info {
-    @apply px-4 
-    lg:max-w-[1320px] lg:mx-auto;
+    @apply px-4 flex leading-6 pb-6 min-h-[64vh] pt-2 flex-col-reverse items-center justify-between 
+    lg:flex-row lg:max-w-[1320px] lg:mx-auto;
+
+    .diagram {
+      @apply w-full my-16 min-[850px]:w-1/3 items-center justify-center flex relative
+      xs:w-[70%] sm:w-1/2  
+      lg:my-0;
+
+      .circle {
+        @apply relative w-[255px] h-[255px] bg-purple-400 rounded-full flex items-center justify-center 
+        sm:w-[290px] sm:h-[290px];
+
+        > div {
+          @apply w-[200px] h-[200px] bg-purple-300 opacity-75 rounded-full flex items-center justify-center
+          sm:w-[232px] sm:h-[232px];
+
+          div {
+            @apply w-[145px] h-[145px] bg-purple-100 opacity-[15%] rounded-full 
+            sm:w-[176px] sm:h-[176px];
+          }
+        }
+      }
+
+      .person-one {
+        @apply w-[65px] h-[65px] translate-y-[-10%] animate-[pong_2.1s_ease-in-out_infinite] absolute flex justify-center items-end bg-white rounded-full right-[35%]
+        sm:w-[88px] sm:h-[88px];
+        animation-delay: 0.5s;
+
+        img {
+          @apply w-full rounded-full;
+        }
+      }
+
+      .person-two {
+        @apply w-[56px] h-[56px] translate-y-[-10%] animate-[pong_2s_ease-in-out_infinite] absolute flex justify-center items-end bg-blue-400 rounded-full right-[55%] top-[-10%]
+        sm:w-[69px] sm:h-[69px];
+        animation-delay: 0.2s;
+
+        img {
+          @apply w-full rounded-full;
+        }
+      }
+
+      .person-three {
+        @apply w-[48px] h-[48px] translate-y-[-10%] animate-[pong_1.7s_ease-in-out_infinite] absolute flex justify-center items-end bg-blue-400 rounded-full right-[65%] top-[50%];
+        animation-delay: 50ms;
+
+        img {
+          @apply w-full rounded-full;
+        }
+      }
+
+      .person-four {
+        @apply w-[48px] h-[48px] translate-y-[-10%] animate-[pong_2s_ease-in-out_infinite] absolute flex justify-center items-end bg-blue-400 rounded-full right-[20%] top-[5%];
+
+        img {
+          @apply w-full rounded-full;
+        }
+      }
+
+      .person-five {
+        @apply w-[56px] h-[56px] translate-y-[-10%] animate-[pong_2.1s_ease-in-out_infinite] absolute flex justify-center items-end bg-blue-400 rounded-full left-[5%] top-[25%] 
+        sm:w-[69px] sm:h-[69px];
+        animation-delay: 0.5s;
+
+        img {
+          @apply w-full rounded-full;
+        }
+      }
+
+      .person-six {
+        @apply w-[56px] h-[56px] translate-y-[-10%] animate-[pong_2s_ease-in-out_infinite] absolute flex justify-center items-end bg-blue-400 rounded-full left-[15%] bottom-[-30px]
+        sm:bottom-0 sm:w-[69px] sm:h-[69px];
+        animation-delay: 0.2s;
+
+        img {
+          @apply w-full rounded-full;
+        }
+      }
+
+      .person-seven {
+        @apply w-[54px] h-[54px] translate-y-[-10%] animate-[pong_1.7s_ease-in-out_infinite] absolute flex justify-center items-end bg-blue-400 rounded-full right-0 top-[25%] 
+        sm:w-[64px] sm:h-[64px];
+        animation-delay: 50ms;
+
+        img {
+          @apply w-full rounded-full;
+        }
+      }
+
+      .person-eight {
+        @apply w-[48px] h-[48px] translate-y-[-10%] animate-[pong_2s_ease-in-out_infinite] absolute flex justify-center items-end bg-blue-400 rounded-full right-[40%] bottom-[-10%];
+
+        img {
+          @apply w-full rounded-full;
+        }
+      }
+
+      .person-nine {
+        @apply w-[62px] h-[62px] translate-y-[-10%] animate-[pong_2.1s_ease-in-out_infinite] absolute flex justify-center items-end bg-blue-400 rounded-full right-[5%] top-[65%];
+        animation-delay: 0.5s;
+
+        img {
+          @apply w-full rounded-full;
+        }
+      }
+    }
 
     .users {
+      @apply mb-12 w-full 
+      lg:w-1/2;
+
       h3 {
         @apply font-bold text-left mb-4
         sm:text-lg 
@@ -99,7 +207,7 @@
 
   .premium {
     @apply flex leading-6 items-center justify-center my-14 px-4 
-    sm:mt-52 
+    sm:mt-44
     lg:mt-[10.5rem] lg:max-w-[1320px] lg:mx-auto 
     xl:mt-[11.5rem];
 
@@ -163,7 +271,7 @@
 
   .download {
     @apply mt-4 mb-14 flex flex-col items-center px-4
-    lg:flex-row lg:justify-between;
+    lg:flex-row lg:justify-between lg:max-w-[1320px] lg:mx-auto;
 
     .info {
       @apply flex flex-col;
@@ -184,8 +292,8 @@
       }
 
       a {
-        @apply px-12 py-3 bg-blue-200 w-full text-center font-medium ease-in-out rounded-3xl border-0 text-white transition-[background] duration-[.3s]  
-        hover:bg-purple
+        @apply px-6 py-3 bg-blue-200 w-full text-center font-medium ease-in-out rounded-3xl border-0 text-white text-center transition-[background] duration-[.3s]  
+        hover:bg-purple-100
         xs:max-w-[172px];
       }
     }
