--- a/src/components/AdvantageItem/AdvantageItem.module.scss
+++ b/src/components/AdvantageItem/AdvantageItem.module.scss
@@ -1,8 +1,10 @@
 .container {
-  @apply w-1/3 px-1.5 border-0 border-l-[1.5px] border-solid border-purple pl-1;
+  @apply w-1/3 px-1.5 border-0 border-l-[1.5px] border-solid border-purple-100 pl-1
+  xs:pl-3
+  [&_h6]:hover:text-purple-100;
 
   h6 {
-    @apply text-blue-200 font-bold
+    @apply text-blue-200 font-bold duration-150 mb-2
     sm:text-2xl;
   }
 
