--- a/src/components/SignInModal/SignInModal.module.scss
+++ b/src/components/SignInModal/SignInModal.module.scss
@@ -40,7 +40,7 @@
     button {
       @apply mt-2 text-black shadow-md bg-transparent mb-2 w-full rounded
       last:mt-6 last:bg-blue-200 last:text-white last:shadow-none
-      hover:bg-grey last:hover:bg-purple;
+      hover:bg-grey last:hover:bg-purple-100;
 
       svg {
         @apply mr-2;
@@ -56,7 +56,7 @@
 
       span {
         @apply my-0 text-base cursor-pointer block underline transition-all ease-in-out duration-150
-        hover:text-purple;
+        hover:text-purple-100;
       }
     }
   }
