--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -1,9 +1,9 @@
 .button {
   @apply flex justify-center items-center text-center py-2 px-6 items-center bg-blue-200 font-bold rounded-full text-white transition-all ease-linear duration-150
-  hover:bg-purple;
+  hover:bg-purple-100;
 }
 
 .outline {
   @apply bg-transparent text-blue-200 border border-solid border-blue-200
-  hover:bg-transparent hover:border-purple hover:text-purple;
+  hover:bg-transparent hover:border-purple-100 hover:text-purple-100;
 }
