created accordion component

--- a/src/app/[locale]/mobile-app/MobileApp.module.scss
+++ b/src/app/[locale]/mobile-app/MobileApp.module.scss
@@ -1,5 +1,6 @@
 .container {
-  @apply px-4;
+  @apply px-4
+  lg:max-w-[1320px] lg:mx-auto;
 
   .download {
     @apply flex leading-6 pb-6 min-h-[65vh] pt-2 flex-col justify-between 
@@ -134,6 +135,20 @@
             }
           }
         }
+      }
+    }
+  }
+
+  .questions {
+    @apply flex leading-6 pb-8 min-h-[68vh] pt-8 flex-col items-center justify-between 
+    md:flex-row;
+
+    .items {
+      @apply w-full 
+      md:w-1/2;
+
+      h3 {
+        @apply text-2xl font-bold mb-4;
       }
     }
   }
