--- a/src/app/[locale]/mobile-app/MobileApp.module.scss
+++ b/src/app/[locale]/mobile-app/MobileApp.module.scss
@@ -1,11 +1,9 @@
 .container {
-  @apply px-4
-  lg:max-w-[1320px] lg:mx-auto;
-
   .download {
-    @apply flex leading-6 pb-6 min-h-[65vh] pt-2 flex-col justify-between 
+    @apply flex leading-6 pb-6 min-h-[65vh] pt-2 flex-col justify-between mx-4
     sm:pt-12  
-    md:flex-row md:items-start;
+    md:flex-row md:items-start
+    lg:max-w-[1320px] lg:px-4 lg:mx-auto;
 
     .top {
       @apply float-left z-10 pr-0 text-center flex-col items-center inline-flex content-evenly pt-6 pl-0 
@@ -80,8 +78,9 @@
   }
 
   .app {
-    @apply flex leading-6 pb-6 min-h-[48vh] pt-2 flex-col-reverse justify-between
-    md:flex-row md:items-start;
+    @apply flex leading-6 pb-6 min-h-[48vh] pt-2 flex-col-reverse justify-between mx-4
+    md:flex-row md:items-start
+    lg:max-w-[1320px] lg:px-4 lg:mx-auto;
 
     > div {
       @apply my-12 w-full 
@@ -104,8 +103,9 @@
   }
 
   .sections {
-    @apply flex leading-6 pb-6 pt-12 flex-col items-center justify-start 
-    xl:min-h-[58vh];
+    @apply flex leading-6 pb-6 pt-12 flex-col items-center justify-start mx-4 
+    xl:min-h-[58vh]
+    lg:max-w-[1320px] lg:px-4 lg:mx-auto;
 
     > h3 {
       @apply font-bold text-2xl mb-8;
@@ -139,9 +139,65 @@
     }
   }
 
+  .features {
+    @apply flex leading-6 flex flex-col mt-16 mb-40 min-h-[65vh] mx-4 
+    lg:min-h-[40vh] lg:justify-between lg:flex-row lg:my-28 lg:max-w-[1320px] lg:px-4 lg:mx-auto;
+
+    .slider {
+      @apply w-full lg:w-1/3;
+
+      h3 {
+        @apply text-black text-base font-bold mb-0 
+        sm:text-lg 
+        lg:text-2xl;
+      }
+    }
+
+    > img {
+      @apply hidden 
+      lg:block;
+    }
+
+    .features-image {
+      @apply w-[365px] relative h-[110px] mt-20 self-center 
+      sm:w-[355px] sm:h-[160px]  
+      lg:self-start lg:mt-0;
+
+      .light-blue {
+        @apply bg-blue-100 w-[150px] h-[175px] rotate-45 opacity-20 rounded-3xl absolute right-[140px] 
+        sm:w-[170px] sm:h-[215px] sm:right-[156px];
+      }
+
+      .dark-blue {
+        @apply bg-purple-100 w-[160px] h-[190px] rotate-45 opacity-40 rounded-3xl absolute right-[85px] 
+        sm:w-[188px] sm:h-[238px] sm:right-[62px];
+      }
+
+      .image {
+        @apply absolute h-[225px] w-[122px] right-[120px] top-[-24px]
+        sm:h-[300px] sm:w-[168px] sm:top-[-30px] sm:right-[99px];
+      }
+    }
+  }
+
+  .review {
+    @apply pb-8 bg-white-100 pt-8 my-14 px-4;
+
+    > div {
+      @apply flex leading-6 flex-col items-center 
+      sm:mx-[-15px] 
+      lg:mx-0 lg:max-w-[1320px] lg:mx-auto;
+
+      h3 {
+        @apply text-center text-2xl font-bold mb-4;
+      }
+    }
+  }
+
   .questions {
-    @apply flex leading-6 pb-8 min-h-[68vh] pt-8 flex-col items-center justify-between 
-    md:flex-row;
+    @apply flex leading-6 pb-8 min-h-[68vh] pt-8 flex-col items-center justify-between mx-4 
+    md:flex-row 
+    lg:max-w-[1320px] lg:px-4 lg:mx-auto;
 
     .items {
       @apply w-full 
@@ -160,8 +216,9 @@
   }
 
   .platform {
-    @apply flex leading-6 pb-8 pt-8 flex-col justify-center  
-    md:flex-row;
+    @apply flex leading-6 pb-8 pt-8 flex-col justify-center mx-4  
+    md:flex-row
+    lg:max-w-[1320px] lg:px-4 lg:mx-auto;
 
     > div {
       @apply w-full flex flex-col justify-between bg-gradient-to-l to-purple-100 from-blue-200 rounded-3xl relative 
