--- a/src/app/[locale]/mobile-app/MobileApp.module.scss
+++ b/src/app/[locale]/mobile-app/MobileApp.module.scss
@@ -78,13 +78,12 @@
   }
 
   .app {
-    @apply flex leading-6 pb-6 min-h-[48vh] pt-2 flex-col-reverse justify-between mx-4
-    md:flex-row md:items-start
-    lg:max-w-[1320px] lg:px-4 lg:mx-auto;
+    @apply flex leading-6 pb-6 min-h-[48vh] pt-2 flex-col justify-between mx-4
+    lg:flex-row lg:items-start lg:max-w-[1320px] lg:px-4 lg:mx-auto;
 
-    > div {
+    .learning {
       @apply my-12 w-full 
-      md:w-1/2;
+      lg:w-[40%];
 
       h3 {
         @apply font-bold text-base 
@@ -98,6 +97,30 @@
 
       > div {
         @apply mt-14 flex justify-between;
+      }
+    }
+
+    .image {
+      @apply relative flex flex-col w-[90%] min-h-[200px]
+      md:items-center
+      lg:w-auto;
+
+      .back {
+        @apply self-end w-[130px] h-[130px] 
+        sm:h-auto  sm:w-auto;
+      }
+
+      .rect {
+        @apply bg-blue-200 rounded-3xl w-[80%] h-[130px] absolute right-9 top-5
+        sm:h-[254px]   
+        md:w-[500px] 
+        xl:w-[528px];
+      }
+
+      .front {
+        @apply shadow rounded-3xl w-[80%] h-max absolute right-14 top-10
+        md:w-[500px] md:min-w-[500px]
+        xl:min-w-[600px];
       }
     }
   }
