--- a/src/components/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion.module.scss
@@ -8,7 +8,7 @@
     @apply flex justify-between items-center;
 
     h6 {
-      @apply text-base font-medium mb-0;
+      @apply text-base font-medium mb-0 max-w-[calc(100%-20px)];
     }
   }
 
@@ -21,6 +21,6 @@
   @apply text-purple-100;
 
   svg {
-    @apply fill-purple-100 rotate-180;
+    @apply block min-w-[20px] fill-purple-100 rotate-180;
   }
 }
