--- a/src/components/Category/Category.module.scss
+++ b/src/components/Category/Category.module.scss
@@ -1,11 +1,15 @@
 .container {
   @apply py-6 bg-gradient-to-b from-[#ffffff] to-[#f4f6f8]
-  sm:px-4
-  md:flex;
-}
+  sm:px-4;
 
-.list-group {
-  @apply px-8 flex gap-3
-  sm:bg-[#deede671] sm:my-6 sm:pt-10 sm:pb-5 sm:rounded-2xl sm:shadow-sm sm:shadow-[#00000013]
-  md:rounded-l-none md:basis-7/12;
+  > div {
+    @apply md:flex  
+    lg:max-w-[1320px] lg:mx-auto;
+
+    .list-group {
+      @apply px-8 flex gap-3
+      sm:bg-[#deede671] sm:my-6 sm:pt-10 sm:pb-5 sm:rounded-2xl sm:shadow-sm sm:shadow-[#00000013]
+      md:rounded-l-none md:basis-7/12 md:max-w-[calc(100%-300px)];
+    }
+  }
 }
