--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -1,11 +1,13 @@
 .container {
-  @apply my-2 mb-8 flex items-center flex-col;
+  @apply my-2 mb-8 flex items-center flex-col xl:max-w-[135px];
 }
 
 .image-cont {
-  @apply w-[100px] h-[150px] sm:w-[135px] sm:h-[205px] object-contain;
+  @apply w-[100px] h-[150px] object-contain 
+  sm:w-[135px] sm:h-[205px];
 }
 
 .title {
-  @apply block text-center max-w-[100px] mt-3 text-sm font-semibold text-[#6c757d] sm:max-w-[135px];
+  @apply block text-center max-w-[100px] mt-3 text-sm font-semibold text-[#6c757d] 
+  sm:max-w-[135px];
 }
