--- a/src/components/WordsTable/WordsTable.module.scss
+++ b/src/components/WordsTable/WordsTable.module.scss
@@ -1,12 +1,8 @@
 .container {
-  @apply flex overflow-x-auto text-sm;
-  // origin-center rotate-180
-
+  @apply flex overflow-x-auto text-sm
+  origin-center rotate-180;
   .table {
-    // @apply origin-center -rotate-180;
-
-    .table-data {
-    }
+    @apply origin-center -rotate-180;
 
     .row {
       @apply grid grid-cols-[repeat(6,_minmax(150px,_1fr))] w-full;
@@ -25,7 +21,7 @@
 
       &:first-child {
         div {
-          @apply flex items-center;
+          @apply flex items-center border-t-0;
         }
       }
 
