--- a/src/components/VocabularyPage/components/TopBar/components/AddingWordForm/AddingWordForm.module.scss
+++ b/src/components/VocabularyPage/components/TopBar/components/AddingWordForm/AddingWordForm.module.scss
@@ -18,6 +18,22 @@
     > div {
       @apply pr-2 h-full;
 
+      .row {
+        @apply grid grid-cols-2 gap-4;
+
+        > div {
+          @apply flex flex-col;
+
+          label {
+            @apply font-semibold mb-2;
+          }
+
+          select {
+            @apply font-medium px-3 py-1.5 rounded border border-[#ced4da] w-full h-[38px];
+          }
+        }
+      }
+
       label {
         @apply mt-4
         first:mt-0;
