--- a/src/components/VocabularyPage/components/WordsTable/EditDeleteWordModal/EditDeleteWordModal.module.scss
+++ b/src/components/VocabularyPage/components/WordsTable/EditDeleteWordModal/EditDeleteWordModal.module.scss
@@ -6,3 +6,27 @@
     hover:text-purple-100;
   }
 }
+
+.delete-modal {
+  @apply sm:h-[200px] sm:w-[475px] sm:self-center sm:justify-self-center;
+
+  > div {
+    @apply flex flex-col items-center h-full justify-center;
+  }
+
+  .delete {
+    @apply flex flex-col justify-center items-center;
+
+    h6 {
+      @apply text-xl text-center font-bold mb-5 mt-[-35px];
+    }
+
+    .btns {
+      @apply grid grid-cols-2 w-full gap-4;
+
+      button {
+        @apply rounded-lg;
+      }
+    }
+  }
+}
