created added list form

--- a/src/components/AddList/AddList.module.scss
+++ b/src/components/AddList/AddList.module.scss
@@ -2,12 +2,25 @@
   @apply flex flex-col items-center text-[#bcc1c6];
 
   > p {
-    @apply w-[100px] text-center 
+    @apply w-[100px] text-center cursor-pointer 
     sm:w-[135px];
   }
 }
 
 .photo {
-  @apply border border-[#00000020] border-dashed my-2 w-[100px] h-[100px] rounded-xl flex items-center justify-center font-bold 
+  @apply border border-[#00000020] cursor-pointer text-[#bcc1c6] border-dashed my-2 w-[100px] h-[100px] rounded-xl flex items-center justify-center font-bold 
   sm:w-[135px] sm:h-[135px];
+}
+.add-list {
+  @apply sm:h-[410px] sm:w-[300px] sm:self-center sm:justify-self-center;
+
+  .list-form {
+    .add-photo {
+      @apply w-full mb-5;
+    }
+
+    button {
+      @apply rounded-lg w-full mt-3;
+    }
+  }
 }
