--- a/src/components/Burger/Burger.module.scss
+++ b/src/components/Burger/Burger.module.scss
@@ -42,14 +42,44 @@
       @apply py-4;
 
       li {
-        @apply my-1;
+        @apply flex items-center justify-between leading-5 my-1;
 
         a {
-          @apply font-medium text-base my-1 capitalize;
+          @apply font-medium my-1 capitalize;
+        }
+
+        ul {
+          @apply py-0 pl-3;
         }
 
         .active {
           @apply after:content-none after:bg-slate-300;
+        }
+
+        .arrow {
+          @apply transition-all ease-in-out duration-150
+          hover:text-purple-100;
+        }
+
+        .rotated {
+          @apply rotate-180;
+        }
+
+        .dropdown {
+          @apply self-start invisible;
+        }
+
+        .dropdown-active {
+          @apply visible;
+        }
+
+        .dropdown-btn {
+          @apply flex items-center justify-between w-full;
+        }
+
+        &:last-of-type {
+          @apply cursor-pointer flex-col
+          [&_svg]:hover:text-purple-100;
         }
       }
     }
