--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -23,14 +23,15 @@
 }
 
 .footer-center {
-  @apply md:flex md:justify-between 
+  @apply md:flex md:justify-between md:items-center 
   lg:w-full;
 }
 
 .footer-left {
   @apply flex flex-col items-center mb-14 
   sm:items-start sm:mb-4 
-  lg:mb-0 lg:justify-center 
+  md:mb-0
+  lg:justify-center 
   2xl:ml-2.5;
 
   a {
