implemented react hook form in auth modals

--- a/src/app/[locale]/contact-us/ContactUsPage.module.scss
+++ b/src/app/[locale]/contact-us/ContactUsPage.module.scss
@@ -44,7 +44,7 @@
         }
 
         .error {
-          @apply text-red mt-1.5;
+          @apply text-red mt-1.5 text-sm;
         }
       }
     }
