added hover to vocabulary add list modal

--- a/src/components/AddList/AddList.module.scss
+++ b/src/components/AddList/AddList.module.scss
@@ -10,8 +10,9 @@
 }
 
 .photo {
-  @apply border border-[#00000020] cursor-pointer text-[#bcc1c6] border-dashed my-2 w-[100px] h-[100px] rounded-xl flex items-center justify-center font-bold 
-  sm:w-[135px] sm:h-[135px];
+  @apply border border-[#00000020] cursor-pointer text-[#bcc1c6] border-dashed my-2 w-[100px] h-[100px] rounded-xl flex items-center justify-center font-bold transition-all ease-linear duration-150 
+  sm:w-[135px] sm:h-[135px]
+  hover:text-purple-100 hover:border-purple-100;
 }
 
 .add-list {
